finalized spacing and fixed buggy mobile mode a bit

--- a/portfoliostylesheet.css
+++ b/portfoliostylesheet.css
@@ -25,8 +25,9 @@ body {
 	
 h3 {
 	font-family:"avenir book";
-	text-size:1rem;
+	font-size:.9rem;
 	color:#B28537;
+	text-transform:uppercase;
 }
 
 .splitGrid {
@@ -99,11 +100,11 @@ h3 {
 	flex-direction:column;
 	align-items:left;
 /*	padding-left:25px;*/
-	padding-right:25px;
+/*	padding-right:25px;*/
 	margin-left:15%;
 	margin-right:5px;
 	padding-top:40px;
-	line-height:130%;
+	line-height:140%;
 }
 
 .contactIcon{
@@ -147,22 +148,22 @@ h3 {
 
 .edName { 
 /*	font-family:"Audrey";*/
-	font-weight:"bold";
-	font-size:1rem;
+/*	font-weight:"bold";*/
+	font-size:.9rem;
 	color:black;
 /*	padding-bottom:10px;*/
 }
 
 .edWhere {
-	font-size:.6rem;
-	color:black;
+	font-size:.7rem;
+	color:#292B2F;
 /*	padding-bottom:10px;*/
-/*	padding-top:10px;*/
+	padding-top:10px;
 }
 
 .edWhen {
-    font-size:.6rem;
-	color:black;
+    font-size:.7rem;
+	color:#292B2F;
 	padding-bottom:10px;
 }
 	
@@ -192,14 +193,16 @@ h3 {
 .careerProfile {
 	display: flex;
 	flex-direction:column;
-	align-items:left;
-	wrap:nowrap;
 	margin: 15px;
 	padding: 25px;
-	padding-top:10%;
+	padding-top:5%;
 }
 	
-/*.profileBody {}*/
+.profileBody {
+	font-size:.9rem;
+	padding-top:5px;
+	line-spacing:110%;
+}
 	
 .projects {
 	display: flex;
@@ -250,7 +253,7 @@ h3 {
 .contentHeadings {
 	color:#B28537;
 	font-size:2rem;
-	padding-top:25px;
+	padding-top:10px;
 	font-family:"avenir book";
 	text-transform: uppercase;
 	
@@ -278,7 +281,6 @@ h3 {
 	.header{
 		background-color:#215097;
 		display: flex;
-		margin: 10%;
 		align-items:center;
 		flex-direction: column;
 		flex-wrap:wrap;
@@ -313,7 +315,7 @@ h3 {
 	}
 	
 	.contactBar {
-		background-color: #88A19E;
+		background-color: #C6D2D1;
 		display: flex;
 		flex-direction: column;
 		flex-wrap:wrap;
@@ -324,6 +326,31 @@ h3 {
 	.footer {
 		margin:0;
 	}
+	.contactDeets {
+		margin-left:0;
+		margin-right:0;
+		padding-top:40px;
+		line-height:140%;
+		
+		
+	
+	}
+	.langSkills {
+		padding-right:0px;
+		margin-left:0;
+		margin-right:0;
+		padding-bottom:50px;
+		padding-top:20px;
+		align-items:center;
+	}
+	
+	.educationDeets {
+		padding-right:0px;
+		margin-left:0%;
+		margin-right:0px;
+		wrap:wrap;
+		padding-top:20px;
+		align-items:center;
 	
 	}
 
